# sweet-models-enterprise

./: .dockerignore  .env.example  .gitignore  ADMIN_SETUP_COMPLETE.md  ANDROID_PUBLISH_GUIDE.md  ARCHITECTURE.md  CODE_QUALITY_ANALYSIS.md  COMPLETION_CHECKLIST.md  CONFIRMACION_TODO_LISTO.md  DOCUMENTATION_INDEX.md  Dockerfile  ESTADO_SISTEMA.md  EXECUTION_COMPLETE.md  EXECUTIVE_SUMMARY.md  FINAL_DELIVERY_REPORT.md  FINAL_SECURITY_AUDIT_REPORT.md  FINAL_SUMMARY.md  FINAL_VALIDATION_CHECKLIST.md  FIREBASE_ANDROID_SETUP.md  FLUTTER_BACKEND_INTEGRATION_GUIDE.md  FLUTTER_DOCS_NAVIGATION.md  FLUTTER_EXECUTION_GUIDE.md  FLUTTER_INTEGRATION_CHANGES_SUMMARY.md  GAMIFICATION_SUMMARY.md  GAMIFICATION_TEST_GUIDE.md  GITHUB_SETUP.md  GIT_PUSH_READY.md  GRPC_IMPLEMENTATION_GUIDE.md  INDICE_DOCUMENTACION_FINAL.md  INSTALACION_EXITOSA.md  INSTALAR_TODO.ps1  INSTALL_WEB_DEPS.bat  INTEGRATION_COMPLETE.md  INTEGRATION_SUMMARY.md  LISTO_PARA_EJECUTAR.md  LOGIN_PAGE_IMPLEMENTATION.md  MOBILE_APP_SETUP.md  NUEVAS_FUNCIONALIDADES.md  PASOS_FINALES_GITHUB.md  PASO_A_PASO.md  (+53 more)
StudiosDKTelemetry/: background.js
backend_api/: .env.example  API_DOCUMENTATION.md  AUTH_SYSTEM_README.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  LEDGER_DOCUMENTATION.md  LEDGER_EXAMPLES.sql  LEDGER_IMPLEMENTATION_SUMMARY.md  SECURITY_ANALYSIS.md  SECURITY_AUDIT.md  SECURITY_FEATURES.md  SOCIAL_MODULE_DOCS.md  WEB3_AUTH_DOCUMENTATION.md  check_output.txt  errors.txt  test_login.ps1
backend_api/migrations/: 004_create_audit_ledger.sql  008_refresh_tokens.sql  010_admin_dashboard.sql  20250101000001_create_users_table.sql  20250101000002_create_groups_table.sql  20250104000001_add_user_profile_fields.sql  20250104000003_create_cameras_table.sql  20250104000005_create_kyc_documents_table.sql  20250104000007_seed_model_user.sql  20250105000011_notifications.sql  20251206000002_create_audit_ledger.sql  20251206000003_create_social_tables.sql  20251206000005_create_zk_identity.sql  20251217000001_add_full_name_to_users.sql  20251218000001_add_platform_usernames_and_is_active.sql  20251218000002_create_production_table.sql  20251218000003_create_penalties.sql  20251218_create_penalties.up.sql  20251219175100_create_market.down.sql  20251219175100_create_market.up.sql  20251219_create_attendance.down.sql  20251219_create_market.up.sql
backend_api/src/: auth.rs  lib.rs  main.rs  main.rs.backup  main_auth.rs  main_jwt.rs  security.rs  social.rs  state.rs
backend_api/src/ai/: phoenix.rs
backend_api/src/auth/: jwt.rs  mod.rs  web3.rs
backend_api/src/auth/zk/: mod.rs
backend_api/src/config/: env_validator.rs
backend_api/src/finance/: ARCHITECTURE.md  handlers.rs  ledger.rs  mod.rs
backend_api/src/handlers/: admin.rs  attendance.rs  auth.rs  kyc.rs  market.rs  mod.rs
backend_api/src/middleware/: mod.rs  rate_limit.rs
backend_api/src/models/: user.rs
backend_api/src/services/: jwt.rs  mod.rs  password.rs  storage.rs
backend_api/src/social/: mod.rs
backend_api/tests/: integration_tests.rs
database/: schema_mysql.sql
docker/: docker-compose.yml
extension_dk/: background.js  manifest.json  popup.html  popup.js
mobile_app/: .flutter-settings  ADMIN_DASHBOARD_COMPLETION_REPORT.md  ADMIN_DASHBOARD_IMPLEMENTATION.md  ADMIN_DASHBOARD_QUICKSTART.md  ADMIN_DASHBOARD_UI_STRUCTURE.md  ADVANCED_SCREENS_GUIDE.md  APPLE_ECOSYSTEM_CONFIG.md  APPLE_IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  (+37 more)
sweet_models_enterprise/backend_api/: .env.example  Cargo.toml  Dockerfile  Dockerfile.prod  FCM_NOTIFICATIONS_SUMMARY.md  GAMIFICATION_GUIDE.md  NOTIFICATIONS_GUIDE.md  NOTIFICATIONS_README.md  README_NOTIFICATIONS_INDEX.md  TLS_SETUP.md  clean_blanks.py  deploy_notifications.sh  diagnostico.ps1  gen_hash.rs  insert_modelo_user.ps1  notifications_examples.sh  test_emergency_complete.ps1
sweet_models_enterprise/backend_api/migrations/: 20250104000002_create_financial_config.sql  20250104000004_create_otp_codes_table.sql  20250104000006_create_model_tables.sql  20250104000007_seed_model_user.sql  20250104000008_create_production_logs.sql  20250104000009_create_audit_trail.sql  20250104000010_create_group_members.sql  20250105000001_admin_dashboard.sql  20251206000001_create_payouts_uuid.sql  20251206000004_web3_authentication.sql  20251209000001_create_treasury_tables.sql  20251209000002_create_device_tokens.sql  20251209000007_create_payroll_tables.sql  20251209000008_create_attendance_logs.sql  20251209000009_create_user_shifts.sql  20251210000001_finance_schema_v2.sql  20251210000002_gamification.sql
sweet_models_enterprise/backend_api/src/: emergency.rs  lib.rs  main.rs  main_jwt.rs  rpc.rs  state.rs
sweet_models_enterprise/backend_api/src/admin/: god_mode.rs  mod.rs
sweet_models_enterprise/backend_api/src/ai/: beyorder_chat.rs  beyorder_observer.rs  mod.rs  phoenix.rs
sweet_models_enterprise/backend_api/src/auth/: web3.rs
sweet_models_enterprise/backend_api/src/config/: mod.rs
sweet_models_enterprise/backend_api/src/engine/: core.rs  mod.rs
sweet_models_enterprise/backend_api/src/finance/: calculate_payout.rs  handlers.rs  ledger.rs  mod.rs  payroll.rs  penalties.rs  treasury.rs
sweet_models_enterprise/backend_api/src/gamification/: config.rs  engine.rs  finance_integration.rs  handlers.rs  hooks.rs  mod.rs  social_integration.rs  store.rs
sweet_models_enterprise/backend_api/src/legal/: contracts.rs  mod.rs
sweet_models_enterprise/backend_api/src/middleware/: auth.rs  mod.rs
sweet_models_enterprise/backend_api/src/notifications/: INTEGRATION_EXAMPLE.rs  handlers.rs  mod.rs
sweet_models_enterprise/backend_api/src/operations/: attendance.rs  attendance_status.rs  mod.rs  room.rs
sweet_models_enterprise/backend_api/src/realtime/: handlers.rs  hub.rs  mod.rs
sweet_models_enterprise/backend_api/src/social/: chat_notifications.rs  feed.rs  mod.rs
sweet_models_enterprise/backend_api/src/storage/: mod.rs
sweet_models_enterprise/backend_api/src/tls/: mod.rs
sweet_models_enterprise/backend_api/src/tracking/: mod.rs
sweet_models_enterprise/backend_api/tests/: integration_tests.rs  matrix_simulation.rs
(+222 files in other folders)
