[package]
name = "backend_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full", "fs"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
axum-extra = { version = "0.9", features = ["multipart"] }
mime_guess = "2.0"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"
csv = "1.3"
calamine = "0.24" # Excel generation
rust_xlsxwriter = "0.68"
pdf_lib = { package = "printpdf", version = "0.7" }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"
