[package]
name = "backend_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Datos & Caché
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros"] }
redis = { version = "0.24", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Velocidad & Mensajería
async-nats = "0.33"
tonic = "0.10"
prost = "0.12"
tonic-health = "0.10"

# Web3 & Crypto
ethers = "2.0"
hex = "0.4"

# Seguridad
sha3 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
argon2 = "0.5"
jsonwebtoken = "9"
dotenvy = "0.15"

# Compatibilidad con código existente
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
deadpool-redis = "0.14"
pdf_lib = { package = "printpdf", version = "0.7" }
