[package]
name = "backend_api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework & HTTP
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
axum-extra = { version = "0.9", features = ["multipart"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tokio = { version = "1", features = ["full", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros"] }
mongodb = "2.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Environment & Logging
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID & Datetime
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Authentication & Security
jsonwebtoken = "9"
argon2 = "0.5"
thiserror = "1.0"
rand = "0.8"

# Cryptography & Zero-Knowledge
k256 = { version = "0.13", features = ["ecdsa", "sha2"] }
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
ethers-core = "2.0"

# Redis & Caching
deadpool-redis = "0.15"
redis = { version = "0.24", features = ["aio", "tokio-comp", "connection-manager"] }

# NATS Messaging
async-nats = "0.33"

# TLS/SSL
tokio-rustls = "0.24"
rustls-pemfile = "1.0"

# File Operations & Encoding
base64 = "0.21"
mime_guess = "2.0"

# Data Formats
csv = "1.3"
calamine = "0.24"
rust_xlsxwriter = "0.68"
printpdf = "0.7"

# Futures
futures-util = "0.3"

# Binary targets
[[bin]]
name = "backend_api"
path = "src/main.rs"

[[bin]]
name = "main_auth"
path = "src/main_auth.rs"

[[bin]]
name = "gen_hash"
path = "src/bin/gen_hash.rs"

[profile.dev]
default-run = "backend_api"

[profile.release]
opt-level = 3

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"
