[package]
name = "backend_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = { version = "0.24", features = ["http2"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.24", default-features = false, features = ["logging", "tls12"] }
rustls-pemfile = "1"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Almacenamiento S3-compatible (MinIO)
rust-s3 = { version = "0.34", default-features = false, features = ["tokio-rustls-tls"] }
mime_guess = "2.0"

# Datos & Caché
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros"] }
redis = { version = "0.24", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Velocidad & Mensajería
async-nats = "0.33"
tonic = "0.10"
prost = "0.12"
tonic-health = "0.10"

# Web3 & Crypto
ethers = "2.0"
ethers-core = "2.0"
hex = "0.4"
bs58 = "0.5"
ed25519-dalek = "2.1"
sha3 = "0.10"

# Auto-reparación / Phoenix
async-openai = "0.23"
regex = "1"
dotenv = "0.15"

# Seguridad
aes-gcm = "0.10"
rand = "0.8"
argon2 = "0.5"
jsonwebtoken = "9"
dotenvy = "0.15"

# Compatibilidad con código existente
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
deadpool-redis = "0.14"
pdf_lib = { package = "printpdf", version = "0.7", features = ["embedded_images"] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }

# WebSockets & Social
dashmap = "5.5"
futures-util = "0.3"
base64 = "0.21"
thiserror = "1.0"
tokio-tungstenite = "0.21"

# ZK Auth
k256 = { version = "0.13", features = ["ecdsa"] }

# Push Notifications (FCM) - Firebase Cloud Messaging
reqwest = { version = "0.11", features = ["json"] }

